# audio-fx-designer

./: .gitignore  CMakeLists.txt  README.md
include/: AudioSystem.hpp  FDNReverb.hpp  Filter.hpp  FuncGenerator.hpp  WavWriter.hpp
src/: AudioSystem.cpp  Convolution.cpp  FDNReverb.cpp  Filter.cpp  FuncGenerator.cpp  WavWriter.cpp  main.cpp
tests/: FilterTest.cpp  RoundtripTest.cpp  SignalFuncTest.cpp  build_fdn_test.sh  build_wav_test.sh  fdnReverbTest.cpp  wavReaderTest.cpp  wavWriterTest.cpp
tools/: data_viusalizer.m  estimate_frequency.m  eval_fdn_test.m  eval_fir.m  eval_func_gen.m  eval_iir.m  eval_wav.m  eval_wav_writer.m  ir_cab_process.m  plot_impulse_response.m  plot_samples.m
